# AFRODITE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  positions_detectors.py
.github/workflows/: documentation.yaml  macos.yaml  standalone.yaml  style.yaml  ubuntu.yaml
HPCscripts/: README.md  detector_setup.py  grid_response.mac  grid_response_133Xe.mac  make_macros-133Xe.py  make_macros.py
Mesh-Models/DETECTORS/CLOVER/CLOVER-InternalVacuum/: CloverInternalVacuum_approx.ply
Mesh-Models/DETECTORS/CLOVER/CloverEncasement/: CloverEncasement_new_approx.ply
Mesh-Models/DETECTORS/CLOVER/HPGeCrystals/: HPGe-RoundedCrystal1_10umTolerance.ply  HPGe-RoundedCrystal2_10umTolerance.ply  HPGe-RoundedCrystal3_10umTolerance.ply  HPGe-RoundedCrystal4_10umTolerance.ply  HPGe_pureCylindricalBorehole_LithiumContact1_10um.ply  HPGe_pureCylindricalBorehole_LithiumContact2_10um.ply  HPGe_pureCylindricalBorehole_LithiumContact3_10um.ply  HPGe_pureCylindricalBorehole_LithiumContact4_10um.ply
Mesh-Models/DETECTORS/CLOVER/Shield/BGO-Crystals/: BGO-Crystal_Modified_1.ply  BGO-Crystal_Modified_10.ply  BGO-Crystal_Modified_11.ply  BGO-Crystal_Modified_12.ply  BGO-Crystal_Modified_13.ply  BGO-Crystal_Modified_14.ply  BGO-Crystal_Modified_15.ply  BGO-Crystal_Modified_16.ply  BGO-Crystal_Modified_2.ply  BGO-Crystal_Modified_3.ply  BGO-Crystal_Modified_4.ply  BGO-Crystal_Modified_5.ply  BGO-Crystal_Modified_6.ply  BGO-Crystal_Modified_7.ply  BGO-Crystal_Modified_8.ply  BGO-Crystal_Modified_9.ply
Mesh-Models/DETECTORS/CLOVER/Shield/Body/: Body_Modified2_tol_10um.ply
Mesh-Models/DETECTORS/CLOVER/Shield/Heavimet/: HEAVIMET_30mm.ply
Mesh-Models/DETECTORS/CLOVER/Shield/PMT-Connectors/: PMT-ConnecterArray.ply
Mesh-Models/DETECTORS/CLOVER/Shield/PMTs/: PMT1.ply  PMT10.ply  PMT11.ply  PMT12.ply  PMT13.ply  PMT14.ply  PMT15.ply  PMT16.ply  PMT2.ply  PMT3.ply  PMT4.ply  PMT5.ply  PMT6.ply  PMT7.ply  PMT8.ply  PMT9.ply
Mesh-Models/STRUCTURES/Frame/: AFRODITE_OuterFrame_100umTolerance.ply  OuterFrame_100umTolerance.ply
Mesh-Models/STRUCTURES/MathisTC/: MathisTC_sealedPorts.ply  target_chamber_new_sealed_fused_100umTolerance.ply  target_chamber_new_sealed_fused_10umTolerance.ply
all/: CMakeLists.txt
analysis/: AnalyseSims.C  AnalyseSims.h  GetPeaks_OCL.C  MakeResponse.C  ReadAndExportSim.ipynb  SpectraAnalyzer.C  SpectraAnalyzer.h  TestResponse.C  export_hist.C  th1_to_mama.C  tmp.txt
analysis/clover/: spec_to_matrix.py
analysis/ocl/: spec_to_matrix.py  spec_to_matrix_mama.py  spec_to_matrix_v3.py
analysis_6labr/: AnalyseSims.C  AnalyseSims.h  ReadAndExportSim.ipynb  Untitled.ipynb  efficiencies.csv  export_hist.C  extract_spec.py  spec_to_matrix.py  tmp.txt
analysis_PR271_setup/: AnalyseSims.C  AnalyseSims.h  Analysis_of_a_spectrum.ipynb  MakeResponse.C  ReadAndExportSim.ipynb  SpectraAnalyzer.C  SpectraAnalyzer.h  Untitled.ipynb  Untitled2.ipynb  WriteToTable.cpp  alfna_all.mat  alfna_bg.mat  csv_to_dat.py  debug.C  fix_resp_table.py  input.unx  tmp.txt  tst.csv
analysis_PR271_setup/clover/: spec_to_matrix_mama.py
app/: AFRODITE.cc  CMakeLists.txt  test_speed.cc
cmake/: CADMesh-CMakeLists.txt.in
cmake/Modules/: FindASSIMP.cmake  FindAssimp.cmake  Findassimp.cmake
documentation/: CMakeLists.txt  Doxyfile
documentation/pages/: about.dox
include/: Analysis.hh  CloverFactory.hh  Constants.hh  DetectorConstruction.hh  DetectorHit.hh  DetectorSetupMessenger.hh  EnergyDepSD.hh  EventAction.hh  FTALaBr3.hh  LaBr3.h  OCLLaBr3.hh  PrimaryGeneratorAction.hh  RunAction.hh  S2Factory.hh  SingleScintParameters.hh  SteppingAction.hh
include/Detectors/: CloverFactory.hh  DetectorFactory.hh  FTALaBr3.hh  OCLLaBr3.hh  S2Factory.hh
include/Frame/: DetectorFrame.hh  Slot.hh
include/detector/: CloverFactory.hh  DetectorFactories.hh  DetectorFactory.hh  Detectors.hh  FTALaBr3.hh  MeshModels.h  MeshReader.hh  OCLLaBr3.hh  S2Factory.hh
include/meshreader/: MeshReader.hh
include/user/: ActionInitialization.hh  Co60SourceGenerator.hh  DetectorConstruction.hh  DetectorSetupMessenger.hh  EventAction.hh  LorentzBoostedGammaSource.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorActionMessenger.hh  RunAction.hh  SteppingAction.hh
macros/: Co60.mac  init_vis.mac  place_detectors.mac  run.mac  run_beam.mac  vis.mac
results/: CreateSimMac.py  MergeFiles.c
source/: DetectorSetupMessenger.cc  EnergyDepSD.cc
source/Detectors/: CloverData.hpp  CloverFactory.cc  DetectorFactories.cc  FTALaBr3.cc  MeshModels.cc  MeshReader.cc  OCLLaBr3.cc  S2Factory.cc  SingleScintParameters.hh
source/G4User/: ActionInitialization.cc  Co60SourceGenerator.cc  DetectorConstruction.cc  DetectorSetupMessenger.cc  EventAction.cc  LorentzBoostedGammaSource.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorActionMessenger.cc  RunAction.cc  SteppingAction.cc
source/meshreader/: MeshReader.cc
src/: CloverFactory.cc  DetectorConstruction.cc  DetectorHit.cc  EventAction.cc  FTALaBr3.cc  OCLLaBr3.cc  PrimaryGeneratorAction.cc  RunAction.cc  S2Factory.cc  SteppingAction.cc
src/Detectors/: CloverFactory.cc  FTALaBr3.cc  OCLLaBr3.cc  S2Factory.cc
src/G4User/: ActionInitialization.cc
test/: CMakeLists.txt
test/source/: Detector.cpp  MeshReader.cpp  SetupMessenger.cpp  Slot.cpp  main.cpp
